# skyloom

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  run.sh  test.py
app/: app.py
app/models/: address.py  settings.py  user.py
app/pages/: __init__.py  dashboard.py  new_user.py  profile.py
app/pages/components/: __init__.py  main_display.py  profile_left.py  profile_right.py  user_addresses.py  user_details.py  warning_strip.py
app/pages/components/profile/: __init__.py  settings_tree.py  user_addresses.py  user_details.py
app/static/css/: about.css  base.css  login.css  register.css
app/static/css/components/: dashboard.css  footer.css  header.css  navbar.css  welcome.css
app/templates/: about.html  base.html  dashboard.html  login.html  register.html  support.html
app/templates/components/: dashboard.html  footer.html  header.html  navbar.html  welcome.html
app/utils/: __init__.py  color_theme.py  current_weather.py  json.py  weather.py
core/: __init__.py  json.py
setup/: __init__.py  app.py
setup/pages/: __init__.py  about.py  new_user.py  support.py
